<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="item"
            type="com.mobileChallenge.model.Item" />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:layout_marginBottom="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:gravity="center_vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@android:color/white"
            android:shadowColor="@color/cardView_shadow_color"
            android:foreground="?android:attr/selectableItemBackground">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/repo_name"
                    android:layout_width="110dp"
                    android:layout_height="24dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@{item.name}"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.052"
                    tools:text="@string/repo_name" />

                <TextView
                    android:id="@+id/repo_description"
                    android:layout_width="298dp"
                    android:layout_height="40dp"
                    android:layout_below="@+id/repo_name"
                    android:layout_alignStart="@+id/repo_name"
                    android:layout_alignLeft="@+id/repo_name"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="40dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@{item.description}"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"

                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    tools:text="@string/repo_description" />

                <TextView
                    android:id="@+id/repo_owner_name"
                    android:layout_width="wrap_content"
                    android:layout_height="17dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="12dp"
                    android:layout_toStartOf="@+id/number_of_stars"
                    android:layout_toLeftOf="@+id/number_of_stars"
                    android:text="@{item.owner.login}"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/avatarImage"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.939"
                    tools:text="@string/repo_owner_name" />

                <ImageView
                    android:id="@+id/avatarImage"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:layout_toStartOf="@+id/repo_owner_name"
                    android:layout_toLeftOf="@+id/repo_owner_name"
                    android:contentDescription="@string/avatar"
                    app:imageUrl="@{item.owner.avatar_url}"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.897"
                    app:srcCompat="@drawable/photo" />

                <TextView
                    android:id="@+id/number_of_stars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@{item.watchers}"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.97"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.909"
                    tools:text="@string/number_of_stars" />

                <ImageView
                    android:id="@+id/starImage"
                    android:layout_width="16dp"
                    android:layout_height="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/star"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/number_of_stars"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.909"
                    app:srcCompat="@mipmap/star" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="42dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </FrameLayout>
</layout>